<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SummaryActivity">

    <TextView
        android:id="@+id/tv_summary"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Summary_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Summary_subtitle"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_summary"
        app:layout_constraintTop_toBottomOf="@id/tv_summary" />

    <TextView
        android:id="@+id/tv_total_table_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Summary_total_table"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_subtitle2"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle2" />

    <TextView
        android:id="@+id/tv_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_total_table_label"
        tools:text="R$ 185,00" />

    <TextView
        android:id="@+id/tv_total_num_people_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Summary_num_people"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_total_table_label"
        app:layout_constraintTop_toBottomOf="@id/tv_total_table_label" />

    <TextView
        android:id="@+id/tv_total_num_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_total_num_people_label"
        tools:text="3" />

    <TextView
        android:id="@+id/tv_tip_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Summary_tip_percentage"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_total_num_people_label"
        app:layout_constraintTop_toBottomOf="@id/tv_total_num_people_label" />

    <TextView
        android:id="@+id/tv_tip_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_tip_percentage_label"
        tools:text="10%" />

    <View
        android:id="@+id/v_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="62dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_percentage_label" />

    <TextView
        android:id="@+id/tv_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TOTAL:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/v_separator"
        app:layout_constraintTop_toBottomOf="@id/v_separator" />

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="@id/v_separator"
        app:layout_constraintTop_toBottomOf="@id/v_separator"
        tools:text="45,65" />

    <Button
        android:id="@+id/btn_calculate_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Calculate_again"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>